ingress.yaml
# einziger eingang von aussen, leitet auf den shorty-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shorty
spec:
  ingressClassName: nginx
  rules:
    - host: shorty.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shorty
                port:
                  number: 3000
